<resources>
    <string name="app_name">appVote-Sainorum</string>
    <string name="loginEnviar">Iniciar Sesión</string>
    <string name="title_activity_privacy_policies">privacyPolicies</string>
    <string name="action_settings">Settings</string>
    <string name="large_text">Texto largo</string>
    <string name="loginInfo">Necesita iniciar sesión en nuestra app para poder crear una votación</string>
    <string name="loginInfoRegister">Introduce su correo y contraseña para iniciar sesión</string>
    <string name="forgotPassword">¿Has olvidado la contraseña?</string>
    <string name="loginNewCount">Crear nueva cuenta</string>
    <string name="enterYourEmail">Introduce su email</string>
    <string name="sendValidateEmail">Enviar correo de validación</string>
    <string name="acceptPrivacyPolicies">Acepto las Políticas de Privacidad</string>
    <string name="privacyPolicies">Políticas de privacidad</string>
    <string name="acceptSendOferts">Deseo recibir información de ofertas y novedades</string>
    <string name="newPoll">Crear votación</string>
    <string name="joinPoll">Unirse a una votación</string>
    <string name="joinResultPoll">Ver resultado de la encuesta</string>
    <string name="updatePassword">Modificar contraseña</string>
    <string name="saveChanges">Guardar cambios</string>
    <string name="enterPollId">Introduce la id de la votación</string>
    <string name="joinRandomPoll">Unirse a una votación Aleatoria</string>
    <string name="joinResultRandomPoll">Ver una encuesta aleatoria</string>
    <string name="typePoll">Tipo de encuesta:</string>
    <string name="writeQuestion">Escriba su pregunta</string>
    <string name="enterYourOption">Introduzca su opción</string>
    <string name="addOptionPoll">Añadir opción a la votación</string>
    <string name="option">Opciones:</string>
    <string name="bigGoogle">GOOGLE</string>
    <string name="logIn">iniciar sesión</string>
    <string name="register">Register</string>
    <string name="checkIn">Registrarse</string>
    <string name="name">Nombre</string>
    <string name="loginEmail">correo@gmail.com</string>
    <string name="loginPassword">Contraseña</string>
    <string name="repeatPassword">Repetir Contraseña</string>
    <string name="leave">Salir</string>
    <string name="idOfPoll">id de la encuesta:</string>
    <string name="sendResult">Enviar Resultados</string>
    <string name="goToMain">Volver al incio</string>
    <string name="privacyPoliciesTitle">Políticas de privacidad\n</string>
    <string name="privacyPoliciesText1">
        Su privacidad es importante para nosotros. Es política de sainerum respetar su privacidad y cumplir con cualquier ley y
        regulación aplicable con respecto a cualquier información persona que podamos recopilar sobre usted.
    </string>
    <string name="privacyPoliciesText2">Esta política es efectiva a partir del 1 de noviembre de 2021 y se actualizó por última vez el 1 de noviembre de 2021</string>
    <string name="logDataTitle">"Registro de datos "</string>
    <string name="logDataText1">
        Cuando visita nuestro sitio web, nuestros servidores pueden registrar automáticamente los datos estándar proporcionados
        por su navegador web. Puede incluir la dirección de Protocolo de Internet (IP) de su dispositivo, el tipo y la versión de su navegador, las
        páginas que visita, la hora y la fecha de su visita, el tiempo que pasa en cada página, otros detalles sobre su visita y los detalles técnicos que ocurren
        en junto con cualquier error que pueda encontrar.
    </string>
    <string name="logDataText2">
        Tenga en cuenta que, si bien es posible que esta información no sea de identificación personal por sí misma,
        es posible combinarla conotros datos para identificarpersonalmente a personas individuales.
    </string>
    <string name="userInformationTitle">"Colección y uso de información "</string>
    <string name="userInformationText1">Podemos recopilar información personal de usted cuando realiza cualquiera de las siguientes acciones en nuestro sitio web:</string>
    <string name="userInformationText2">Utilice un dispositivo móvil o un navegador web para acceder a nuestro contenido.\nContáctenos por correo electrónico, redes sociales o cualquier tecnología similar.\nCuando nos mencionas en las redes sociale.</string>
    <string name="userInformationText3">Podemos recopilar, retener, usar y divulgar información para los siguientes propósitos, y la información personal no se procesará más de una manera que sea incompatible con estos propósitos:</string>
    <string name="userInformationText4">Tenga en cuenta que podemos combinar la información que recopilamos sobre usted con información general o datos de investigación que recibimos de otras fuentes confiables.</string>
    <string name="securityInformationTitle">Seguridad sobre tu información personal\n</string>
    <string name="securityInformationText1">Cuando recopilamos y procesamos información personal, y mientras conservamos esta información, la protegeremos dentro de medios comercialmente aceptables para evitar pérdidas y robos, así como acceso, divulgación, copia, uso o modificación no autorizados.</string>
    <string name="securityInformationText2">Aunque haremos todo lo posible para proteger la información personal que nos proporcione, le aconsejamos que ningún método de transmisión o almacenamiento electrónico es 100% seguro y nadie puede garantizar la seguridad absoluta de los datos. Cumpliremos con las leyes que nos sean aplicables con respecto a cualquier violación de datos.</string>
    <string name="securityInformationText3">Usted es responsable de seleccionar cualquier contraseña y su nivel de seguridad general, garantizando la seguridad de su propia información dentro de los límites de nuestros servicios.</string>
    <string name="keepInformationTitle">¿Durante cuanto tiempo almacenamos su información personal?\n</string>
    <string name="keepInformationText1">Conservamos su información personal solo durante el tiempo que sea necesario. Este período de tiempo puede depender de para qué estamos usando su información, de acuerdo con esta política de privacidad. Si su información personal ya no es necesaria, la eliminaremos o la haremos anónima eliminando todos los detalles que lo identifiquen.</string>
    <string name="keepInformationText2">Sin embargo, si es necesario, podemos retener su información personal para nuestro cumplimiento de una obligación legal, contable o de informes o para fines de archivo en el interés público, fines de investigación científica o histórica o fines estadísticos.</string>
    <string name="internationalInformationTitle">Transferencia internacional de información personal\n</string>
    <string name="internationalInformationText">La información personal que recopilamos se almacena y / o procesa donde nosotros o nuestros socios, afiliados y proveedores externos tenemos instalaciones. Tenga en cuenta que las ubicaciones a las que almacenamos, procesamos o transferimos su información personal pueden no tener las mismas leyes de protección de datos que el país en el que inicialmente proporcionó la información. Si transferimos su información personal a terceros en otros países: (i) realizaremos esas transferencias de acuerdo con los requisitos de la ley aplicable; y (ii) protegeremos la información personal transferida de acuerdo con esta política de privacidad.</string>
    <string name="informationControllingTitle">Derechos y control sobre su información personal\n</string>
    <string name="informationControllingText1">Siempre se reserva el derecho a retenernos información personal, en el entendido de que su experiencia en nuestro sitio web puede verse afectada. No lo discriminaremos por ejercer cualquiera de sus derechos sobre su información personal. Si nos proporciona información personal, comprende que la recopilaremos, la conservaremos, la usaremos y la divulgaremos de acuerdo con esta política de privacidad. Conserva el derecho a solicitar detalles de cualquier información personal que tengamos sobre usted.</string>
    <string name="informationControllingText2">Si recibimos información personal sobre usted de un tercero, la protegeremos como se establece en esta política de privacidad. Si usted es un tercero que proporciona información personal sobre otra persona, declara y garantiza que tiene el consentimiento de dicha persona para proporcionarnos la información personal.</string>
    <string name="informationControllingText3">Si previamente ha aceptado que usemos su información personal con fines de marketing directo, puede cambiar de opinión en cualquier momento. Le proporcionaremos la posibilidad de darse de baja de nuestra base de datos de correo electrónico u optar por no recibir comunicaciones. Tenga en cuenta que es posible que necesitemos solicitarle información específica para ayudarnos a confirmar su identidad.</string>
    <string name="informationControllingText4">Si cree que la información que tenemos sobre usted es inexacta, desactualizada, incompleta, irrelevante o engañosa, comuníquese con nosotros utilizando los detalles proporcionados en esta política de privacidad. Tomaremos medidas razonables para corregir cualquier información que se considere inexacta, incompleta, engañosa o desactualizada.</string>
    <string name="informationControllingText5">Si cree que hemos violado una ley de protección de datos relevante y desea presentar una queja, comuníquese con nosotros utilizando los detalles a continuación y bríndenos todos los detalles de la supuesta violación. Investigaremos su queja de inmediato y le responderemos, por escrito, exponiendo el resultado de nuestra investigación y los pasos que tomaremos para tratar su queja. También tiene derecho a ponerse en contacto con un organismo regulador o una autoridad de protección de datos en relación con su queja.</string>
    <string name="cookiesTitle">Uso de Cookies\n</string>
    <string name="cookiesText">Usamos "cookies" para recopilar información sobre usted y su actividad en nuestro sitio. Una cookie es un pequeño fragmento de datos que nuestro sitio web almacena en su computadora y al que accede cada vez que lo visita, para que podamos comprender cómo utiliza nuestro sitio. Esto nos ayuda a ofrecerle contenido según las preferencias que haya especificado.</string>
    <string name="limitsTitle">Límites de nuestra política\n</string>
    <string name="limitsText">Nuestro sitio web puede tener enlaces a sitios externos que no son operados por nosotros. Tenga en cuenta que no tenemos control sobre el contenido y las políticas de esos sitios, y no podemos aceptar responsabilidad u obligación por sus respectivas prácticas de privacidad.</string>
    <string name="policityChangesTitle">Cambios sobre la política\n</string>
    <string name="policityChangesText1">At our discretion, we may change our privacy policy to reflect updates to our business processes, current acceptable practices, or legislative or regulatory changes. If we decide to change this privacy policy, we will post the changes here at the same link by which you are accessing this privacy policy.</string>
    <string name="policityChangesText2">Si así lo requiere la ley, obtendremos su permiso o le daremos la oportunidad de optar por participar u optar por no participar, según corresponda, de cualquier nuevo uso de su información personal.</string>
    <string name="contactUsTitle">Contacte con nosotros\n</string>
    <string name="contactUsText1">Para cualquier pregunta o inquietud con respecto a su privacidad, puede comunicarse con nosotros utilizando los siguientes detalles:</string>
    <string name="contactUsName">Daniel</string>
    <string name="contactUsCorreo">sainero2002dani.j@gmail.com</string>
</resources>